# sg_webhook

./: .dockerignore  .env.example  DOCKER_TROUBLESHOOTING.md  Dockerfile  QUICK_REFERENCE.md  README.md  SECURITY.md  docker-compose.yml  main.py  payload_processor.py  pyproject.toml
.github/workflows/: docker-publish.yml
