[project]
name = "sg-webhook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "sgtk",
    "shotgun-api3>=3.9.2",
    "usd-core>=25.11",
    "uvicorn>=0.40.0",
]

[tool.uv.sources]
sgtk = { git = "https://github.com/shotgunsoftware/tk-core", rev = "v0.23.5" }
